<resources>
    <string name="app_name">Katalog Buku</string>
    <string name="email_check">Alamat email tidak valid</string>
    <string name="pass_check">Kata sandi harus terdiri dari minimal 5 karakter</string>
    <string name="email">Email</string>
    <string name="password">Kata Sandi</string>
    <string name="login">Masuk</string>
    <string name="desc_login">Tombol Masuk</string>
    <string name="tv_splash">Dispusipda\nKota Sukabumi</string>
    <string name="desc_logo">Logo Aplikasi</string>
    <string name="welcome_text">SELAMAT DATANG!\n\nKatalog Perpustakaan\nDispusipda Kota Sukabumi</string>
    <string name="login_text">Silahkan masukan akun untuk mengelola koleksi buku.</string>
    <string name="btn_text_catalog">Katalog Buku</string>
    <string name="btn_text_admin">Admin</string>
    <string name="publisher_template">Penerbit: %1$s</string>
    <string name="pages_template">Jumlah Halaman: %1$s</string>
    <string name="masukan_judul">Masukan Judul</string>
    <string name="masukan_penulis">Masukan Penulis</string>
    <string name="masukan_penerbit">Masukan Penerbit</string>
    <string name="masukan_jumlah_halaman">Masukan Jumlah Halaman</string>
    <string name="input_cover">Tolong Masukan Cover Buku</string>
    <string name="camera_permission">Anda harus mengizinkan akses kamera</string>
    <string name="success_update">Buku berhasil di perbarui</string>
    <string name="fill_correctly">Tolong isi dengan sesuai</string>
    <string name="wrong_admin">Email atau Kata Sandi salah</string>
    <string name="remove_book">Hapus Buku</string>
    <string name="sure_remove">Apakah Anda yakin ingin menghapus buku ini?</string>
    <string name="yes">Ya</string>
    <string name="no">Tidak</string>
    <string name="success_delete">Buku berhasil dihapus</string>
    <string name="success_add">Buku berhasil ditambahkan</string>
    <string name="by_cam">Buka Kamera</string>
    <string name="by_galeri">Buka Galeri</string>
    <string name="input_title">Masukan Judul Buku</string>
    <string name="input_author">Masukan Nama Penulis</string>
    <string name="input_publisher">Masukan Penerbit Buku</string>
    <string name="input_pages">Masukan Jumlah Halaman</string>
    <string name="btn_add_book">Tambahkan Buku</string>
    <string name="cd_detail">Ini adalah Gambar Detail</string>
    <string name="judul_buku">Judul Buku</string>
    <string name="penulis_buku">Penulis Buku</string>
    <string name="penerbit_buku">Penerbit Buku</string>
    <string name="jumlah_halaman">Jumlah Halaman</string>
    <string name="welcome_edit">Silahkan Edit Buku</string>
    <string name="edit_judul_buku">Edit Judul Buku</string>
    <string name="edit_nama_penulis">Edit Nama Penulis</string>
    <string name="edit_penerbit_buku">Edit Penerbit Buku</string>
    <string name="edit_jumlah_halaman">Edit Jumlah Halaman</string>
    <string name="perbarui_informasi_buku">Perbarui Informasi Buku</string>
    <string name="cari_judul_buku">Cari Judul Buku</string>
    <string name="cd_fab">Ini adalah tombol untuk menambahkan buku</string>
    <string name="Item_book">Judul Buku</string>
    <string name="item_penulis">Penulis Buku</string>
    <string name="cd_del_book">Ini adalah tombol hapus buku</string>
    <string name="cd_edit_book">Ini adalah tombol mengedit buku</string>
    <string name="dinas_name">Dinas Perpustakaan dan Arsip</string>
</resources>