<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    tools:context=".view.ui.UserActivity">

    <TextView
        android:id="@+id/tv_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:fontFamily="@font/overlock_sc"
        android:gravity="center"
        android:text="@string/welcome_text"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_catalog"
        android:layout_width="280dp"
        android:layout_height="60dp"
        android:layout_marginTop="70dp"
        android:fontFamily="@font/overlock_sc"
        android:text="@string/btn_text_catalog"
        app:layout_constraintEnd_toEndOf="@id/tv_welcome"
        app:layout_constraintStart_toStartOf="@id/tv_welcome"
        app:layout_constraintTop_toBottomOf="@id/tv_welcome" />

    <Button
        android:id="@+id/btn_login_admin"
        android:layout_width="280dp"
        android:layout_height="60dp"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/overlock_sc"
        android:text="@string/btn_text_admin"
        app:layout_constraintEnd_toEndOf="@id/btn_catalog"
        app:layout_constraintStart_toStartOf="@id/btn_catalog"
        app:layout_constraintTop_toBottomOf="@id/btn_catalog" />

    <ImageView
        android:id="@+id/iv_ig"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="5dp"
        android:src="@drawable/ic_ig"
        app:layout_constraintBottom_toBottomOf="@id/tv_dinas"
        app:layout_constraintEnd_toStartOf="@id/tv_dinas"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_dinas" />

    <TextView
        android:id="@+id/tv_dinas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="100dp"
        android:text="@string/dinas_name"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/iv_ig"
        app:layout_constraintTop_toBottomOf="@id/btn_login_admin" />

</androidx.constraintlayout.widget.ConstraintLayout>